[gd_scene load_steps=4 format=2]

[ext_resource path="res://cs/卡牌/Card.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.2, 0.2, 0.2, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color( 0, 0, 0, 0.25 )
shadow_size = 4

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.164706, 0.164706, 0.164706, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Card" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 80.0
margin_bottom = 120.0
color = Color( 0.2, 0.2, 0.2, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardPanel" type="Panel" parent="."]
margin_right = 80.0
margin_bottom = 120.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ValueLabel" type="Label" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 35.0
margin_bottom = 35.0
custom_colors/font_color = Color( 0.9, 0.9, 0.9, 1 )
text = "A"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SuitIcon" type="Label" parent="."]
margin_left = 40.0
margin_top = 40.0
margin_right = 70.0
margin_bottom = 80.0
custom_colors/font_color = Color( 0.9, 0.9, 0.9, 1 )
text = "♣"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardButton" type="Button" parent="."]
margin_right = 80.0
margin_bottom = 120.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CardButton" to="." method="_on_CardButton_pressed"] 